[package]
name = "releases-api"
version = "0.2.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
semver = "1.0.20"
serde = "1.0.190"
serde_json = "1.0.108"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
